--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -223,6 +223,9 @@ holder.
                                 <Build-Version>JAXB RI ${project.version}</Build-Version>
                                 <Major-Version>${project.osgi.version}</Major-Version>
                             </manifestEntries>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                            </manifest>
                         </archive>
                     </configuration>
                 </plugin>
@@ -622,7 +625,7 @@ holder.
                         </exclusion>
                     </exclusions>
                 </dependency>
-                <!-- needed for cobertura-instrument ant task to work (in *-rt, *-tools)
+                <!-- needed for cobertura-instrument ant task to work
                      and to not be included in assemblies/shaded jars -->
                 <dependency>
                     <groupId>oro</groupId>
@@ -633,19 +636,19 @@ holder.
                 <dependency>
                     <groupId>asm</groupId>
                     <artifactId>asm</artifactId>
-                    <version>3.0</version>
+                    <version>3.3.1</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
                     <groupId>asm</groupId>
                     <artifactId>asm-tree</artifactId>
-                    <version>3.0</version>
+                    <version>3.3.1</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
                     <groupId>log4j</groupId>
                     <artifactId>log4j</artifactId>
-                    <version>1.2.9</version>
+                    <version>1.2.17</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
