Fix sources and javadoc generation
Change-Id: I191ead962267ac665bb29443819faa3ed9446162

--- a/jaxb-ri/bundles/core/pom.xml
+++ b/jaxb-ri/bundles/core/pom.xml
@@ -81,6 +81,7 @@ holder.
                             <goal>unpack</goal>
                         </goals>
                         <configuration>
+                            <skip>${skipSources}</skip>
                             <artifactItems>
                                 <artifactItem>
                                     <groupId>org.glassfish.jaxb</groupId>
