--- a/jaxb-ri/bundles/osgi/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/osgi/pom.xml
@@ -87,7 +87,7 @@ holder.
     </dependencies>
 
     <properties>
-        <generated.sources.dir>${project.build.directory}/classes</generated.sources.dir>
+        <generated.sources.dir>${project.build.directory}/generated-sources</generated.sources.dir>
     </properties>
 
     <build>
@@ -180,176 +180,111 @@ holder.
                 </configuration>
             </plugin>
 
+            <!--    Can be used to build everything from sources
+              <plugin>
+                  <groupId>org.glassfish.build</groupId>
+                  <artifactId>glassfishbuild-maven-plugin</artifactId>
+                  <executions>
+                      <execution>
+                          <id>unpack-sources</id>
+                          <phase>process-resources</phase>
+                          <goals>
+                              <goal>unpack-sources</goal>
+                          </goals>
+                          <configuration>
+                              <attachSources>true</attachSources>
+                              <excludes>*.java</excludes>
+                              <excludeTransitive>true</excludeTransitive>
+                          </configuration>
+                      </execution>
+                  </executions>
+              </plugin>
+        -->
+
+            <plugin> <!-- want to unpack sources from individual modules -->
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack-sources</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${skipSources}</skip>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>com.sun.xml.bind</groupId>
+                                    <artifactId>jaxb-core</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.xml.bind</groupId>
+                                    <artifactId>jaxb-xjc</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.xml.bind</groupId>
+                                    <artifactId>jaxb-impl</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.xml.bind</groupId>
+                                    <artifactId>jaxb-jxc</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.xml.bind</groupId>
+                                    <artifactId>jaxb1-impl</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.jvnet.staxex</groupId>
+                                    <artifactId>stax-ex</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.xml.fastinfoset</groupId>
+                                    <artifactId>FastInfoset</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${generated.sources.dir}</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>release-profile</id>
-            <build>
-                <plugins>
-                    <!--    Can be used to build everything from sources
-                      <plugin>
-                          <groupId>org.glassfish.build</groupId>
-                          <artifactId>glassfishbuild-maven-plugin</artifactId>
-                          <executions>
-                              <execution>
-                                  <id>unpack-sources</id>
-                                  <phase>process-resources</phase>
-                                  <goals>
-                                      <goal>unpack-sources</goal>
-                                  </goals>
-                                  <configuration>
-                                      <attachSources>true</attachSources>
-                                      <excludes>*.java</excludes>
-                                      <excludeTransitive>true</excludeTransitive>
-                                  </configuration>
-                              </execution>
-                          </executions>
-                      </plugin>
-                -->
-                    <plugin> <!-- want to unpack sources from individual modules -->
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>unpack-sources</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>unpack</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>org.glassfish.jaxb</groupId>
-                                            <artifactId>jaxb-core</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.glassfish.jaxb</groupId>
-                                            <artifactId>jaxb-xjc</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.glassfish.jaxb</groupId>
-                                            <artifactId>jaxb-runtime</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.glassfish.jaxb</groupId>
-                                            <artifactId>jaxb-jxc</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>com.sun.xml.bind</groupId>
-                                            <artifactId>jaxb1-impl</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-
-                                        <artifactItem>
-                                            <groupId>com.sun.xml.txw2</groupId>
-                                            <artifactId>txw2</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>com.sun.istack</groupId>
-                                            <artifactId>istack-commons-runtime</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>com.sun.xsom</groupId>
-                                            <artifactId>xsom</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>relaxngDatatype</groupId>
-                                            <artifactId>relaxngDatatype</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>com.sun.codemodel</groupId>
-                                            <artifactId>codemodel</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.kohsuke.rngom</groupId>
-                                            <artifactId>rngom</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>com.sun.xml.dtd-parser</groupId>
-                                            <artifactId>dtd-parser</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>com.sun.istack</groupId>
-                                            <artifactId>istack-commons-tools</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.jvnet.staxex</groupId>
-                                            <artifactId>stax-ex</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>com.sun.xml.fastinfoset</groupId>
-                                            <artifactId>FastInfoset</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                    </artifactItems>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>build-helper-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>add-source</goal>
-                                </goals>
-                                <configuration>
-                                    <sources>
-                                        <source>${generated.sources.dir}</source>
-                                    </sources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
