--- a/jaxb-ri/bundles/osgi/extra/pom.xml
+++ b/jaxb-ri/bundles/osgi/extra/pom.xml
@@ -91,6 +91,7 @@ holder.
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -115,95 +116,90 @@ holder.
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <useDefaultManifestFile>true</useDefaultManifestFile>
                 </configuration>
             </plugin>
+
+            <!--    Can be used to build everything from sources
+                        <plugin>
+                            <groupId>org.glassfish.build</groupId>
+                            <artifactId>glassfishbuild-maven-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <id>unpack-sources</id>
+                                    <phase>process-resources</phase>
+                                    <goals>
+                                        <goal>unpack-sources</goal>
+                                    </goals>
+                                    <configuration>
+                                        <attachSources>true</attachSources>
+                                        <excludeTransitive>true</excludeTransitive>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+            -->
+
+            <plugin> <!-- want to unpack sources from individual modules -->
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack-sources</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${skipSources}</skip>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>net.java.dev.msv</groupId>
+                                    <artifactId>msv-core</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.java.dev.msv</groupId>
+                                    <artifactId>xsdlib</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.xml.bind.jaxb</groupId>
+                                    <artifactId>isorelax</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${generated.sources.dir}</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>release-profile</id>
-            <build>
-                <plugins>
-                    <!--    Can be used to build everything from sources
-                                <plugin>
-                                    <groupId>org.glassfish.build</groupId>
-                                    <artifactId>glassfishbuild-maven-plugin</artifactId>
-                                    <executions>
-                                        <execution>
-                                            <id>unpack-sources</id>
-                                            <phase>process-resources</phase>
-                                            <goals>
-                                                <goal>unpack-sources</goal>
-                                            </goals>
-                                            <configuration>
-                                                <attachSources>true</attachSources>
-                                                <excludeTransitive>true</excludeTransitive>
-                                            </configuration>
-                                        </execution>
-                                    </executions>
-                                </plugin>
-                    -->
-                    <plugin> <!-- want to unpack sources from individual modules -->
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>unpack-sources</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>unpack</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>net.java.dev.msv</groupId>
-                                            <artifactId>msv-core</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>net.java.dev.msv</groupId>
-                                            <artifactId>xsdlib</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>com.sun.xml.bind.jaxb</groupId>
-                                            <artifactId>isorelax</artifactId>
-                                            <classifier>sources</classifier>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${generated.sources.dir}</outputDirectory>
-                                        </artifactItem>
-                                    </artifactItems>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>build-helper-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>add-source</goal>
-                                </goals>
-                                <configuration>
-                                    <sources>
-                                        <source>${generated.sources.dir}</source>
-                                    </sources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
