--- a/jaxb-ri/bundles/runtime/pom.xml
+++ b/jaxb-ri/bundles/runtime/pom.xml
@@ -82,6 +82,7 @@ holder.
                             <goal>unpack</goal>
                         </goals>
                         <configuration>
+                            <skip>${skipSources}</skip>
                             <artifactItems>
                                 <artifactItem>
                                     <groupId>org.glassfish.jaxb</groupId>
@@ -139,7 +140,7 @@ holder.
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Class-Path>jaxb-core-${project.version}.jar</Class-Path>
+                                        <Class-Path>jaxb-core.jar</Class-Path>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
