--- a/jaxb-ri/bundles/xjc/pom.xml
+++ b/jaxb-ri/bundles/xjc/pom.xml
@@ -176,6 +176,8 @@ holder.
                                     <exclude>org.glassfish.jaxb:txw2</exclude>
                                     <exclude>javax.xml.stream:stax-api</exclude>
                                     <exclude>com.sun.istack:istack-commons-runtime</exclude>
+                                    <exclude>org.apache.ant:ant</exclude>
+                                    <exclude>org.apache.ant:ant-launcher</exclude>
                                     <exclude>com.sun.org.apache.xml.internal:resolver</exclude>
                                 </excludes>
                             </artifactSet>
