use helper plugin for generating osgi version
Change-Id: I32e4ec34dd5d45722683fbee2c08c7c1d65442b7

--- a/jaxb-ri/bundles/osgi/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/osgi/pom.xml
@@ -129,15 +129,15 @@ holder.
                                     com.sun.codemodel.*;version=${codemodel.version},
                                     com.sun.istack;version=${istack.version},
                                     com.sun.istack.*;version=${istack.version},
-                                    com.sun.tools.*;version=${project.osgi.version},
-                                    com.sun.xml.bind;version=${project.osgi.version},
-                                    com.sun.xml.bind.*;version=${project.osgi.version},
+                                    com.sun.tools.*;version=${jaxb.osgiVersion},
+                                    com.sun.xml.bind;version=${jaxb.osgiVersion},
+                                    com.sun.xml.bind.*;version=${jaxb.osgiVersion},
                                     com.sun.xml.dtdparser;version=${dtd-parser.version},
                                     com.sun.xml.dtdparser.*;version=${dtd-parser.version},
                                     com.sun.xml.fastinfoset;version=${fastinfoset.version},
                                     com.sun.xml.fastinfoset.*;version=${fastinfoset.version},
-                                    com.sun.xml.txw2;version=${project.osgi.version},
-                                    com.sun.xml.txw2.*;version=${project.osgi.version},
+                                    com.sun.xml.txw2;version=${jaxb.osgiVersion},
+                                    com.sun.xml.txw2.*;version=${jaxb.osgiVersion},
                                     com.sun.xml.xsom;version=${xsom.version},
                                     com.sun.xml.xsom.*;version=${xsom.version},
                                     org.jvnet.fastinfoset;version=${fastinfoset.version},
